--- a/src/Greeter.PWA/Pages/Home.razor
+++ b/src/Greeter.PWA/Pages/Home.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 @implements IDisposable
-@using System.Text.Json
-@using System.Text
 
 <PageTitle>Home</PageTitle>
 
@@ -83,14 +81,14 @@
 <div class="flex-col" style="gap:2rem">
     <div class="flex jcsb aifs">
         <div class="flex g8">
-            <img style="margin-top:-1rem" width="32" src="icon.png" />
+            <img style="margin-top:-1rem" width="32" src="favicon-32x32.png" />
             <div class="flex-col g0">
                 <h2>Greeter</h2>
-                <small class="muted-color">Simple and elegant way to greet!</small>
+                <small class="muted-color">A simple app to manage events to greet!</small>
             </div>
         </div>
         <div class="flex aic">
-            <Icon Name="ios_share" Tooltip="Share this app" OnClick="ShareApp" />
+            <Icon Name="ios_share" Tooltip="Share this app" OnClick="@greeterService.ShareApp" />
             <Icon Name="@(initialization.CurrentTheme == "light" ? "dark_mode" : "light_mode")"
                   Tooltip="Toggle Theme" OnClick="ToggleTheme" />
         </div>
@@ -112,7 +110,7 @@
         }
         else if (selectedMenu == 3)
         {
-            <Upload />
+            <ExportEvents OnClose="() => selectedMenu = 2" />
         }
         else if (selectedMenu == 4)
         {
@@ -121,7 +119,7 @@
     </div>
 </div>
 
-<div class="menu" style="@((selectedMenu == 1 || selectedMenu == 5) ? "opacity:0;pointer-events:none;": null)">
+<div class="menu" style="@((selectedMenu == 1 || selectedMenu == 3 || selectedMenu == 5) ? "opacity:0;pointer-events:none;": null)">
     <div class="flex jcc aic" style="gap: 2rem">
         <Icon Name="list" Color="@(selectedMenu == 0 ? "crimson" : "var(--primary-fg)")"
               Size="@(selectedMenu == 0 ? "32px" : "24px")" Tooltip="Events"
@@ -141,15 +139,12 @@
     </div>
 </div>
 
-<SaveFilePicker @ref="sfp" SuggestedName="greeter.json" />
-
 @code
-{
-    SaveFilePicker? sfp;
+{    
     int selectedMenu = -1;
     string? active = "active";
 
-    EventModel[] events = [];
+    ICollection<EventModel> events = [];
 
     protected override async Task OnInitializedAsync()
     {
@@ -162,24 +157,12 @@
         if (sender.ToString() == "update")
         {
             selectedMenu = int.Parse(value.ToString()!);
-            // await LoadMenu(5);
             await InvokeAsync(StateHasChanged);
         }
     }
 
     private async Task LoadMenu(int menu)
-    {
-        if (menu == 3)
-        {
-            var json = await browserExtensions.GetFromLocalStorage("events");
-            if (string.IsNullOrWhiteSpace(json) || sfp is null)
-            {
-                return;
-            }
-            await sfp.SaveFile(Encoding.UTF8.GetBytes(json));
-            return; // No need to reload the same menu
-        }
-
+    {        
         active = "inactive";
         await Task.Delay(250);
         selectedMenu = menu;
@@ -195,26 +178,5 @@
         StateHasChanged();
     }
 
-    private async Task<EventModel[]> LoadEvents()
-    {
-        var json = await browserExtensions.GetFromLocalStorage("events");
-        if (string.IsNullOrWhiteSpace(json)) return [];
-        var models = JsonSerializer.Deserialize<EventModel[]>(json) ?? [];
-        return models;
-    }
-
-    private async Task ShareApp()
-    {
-        var data = new
-        {            
-            text = "Check out this amazing Greeter app @ https://sysinfocus.github.io/greeter",
-            title = "Sysinfocus Greeter"
-        };
-        await browserExtensions.InvokeShare(data);
-    }
-
-    public void Dispose()
-    {
-        stateManager.StateChanged -= HandleStateChange;
-    }
+    public void Dispose() => stateManager.StateChanged -= HandleStateChange;
 }
