--- a/src/Greeter.PWA/_Imports.razor
+++ b/src/Greeter.PWA/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Text.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -8,9 +9,11 @@
 @using Microsoft.JSInterop
 @using Greeter.PWA
 @using Greeter.PWA.Layout
+@using Greeter.PWA.Services
 
 @using Sysinfocus.AspNetCore.Components
 
 @inject BrowserExtensions browserExtensions
 @inject Initialization initialization
 @inject StateManager stateManager
+@inject GreeterService greeterService
