Added the loading screen

--- a/src/Greeter.PWA/Pages/Events.razor
+++ b/src/Greeter.PWA/Pages/Events.razor
@@ -2,7 +2,7 @@
 {
     <div class="flex-col f1" style="gap:2rem;overflow:auto;max-height:calc(100dvh - 220px - env(safe-area-inset-bottom));scrollbar-width:none">
         <div class="flex-col g4">
-            <h4>Events</h4>
+            <h4 class="normal"><b>Events</b> (@events.Count)</h4>
             <small class="muted-color">List of existing events</small>
         </div>
 
