Upcomfing days retained and bug fixes

--- a/src/Greeter.PWA/Pages/Home.razor
+++ b/src/Greeter.PWA/Pages/Home.razor
@@ -81,11 +81,8 @@
 <div class="flex-col" style="gap:2rem">
     <div class="flex jcsb aifs">
         <div class="flex g8">
-            <img style="margin-top:-1rem" width="32" src="favicon-32x32.png" />
-            <div class="flex-col g0">
-                <h2>Greeter</h2>
-                <small class="muted-color">A simple app to manage events to greet!</small>
-            </div>
+            <img width="32" src="favicon-32x32.png" />
+            <h2>Greeter</h2>
         </div>
         <div class="flex aic">
             <Icon Name="ios_share" Tooltip="Share this app" OnClick="@greeterService.ShareApp" />
